<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_current"
            android:icon="@drawable/ic_baseline_attach_money_24"
            android:title="@string/menu_current_collection" />
        <item
            android:id="@+id/nav_add"
            android:icon="@drawable/ic_baseline_add_24"
            android:title="@string/menu_add_collection" />
        <item
            android:id="@+id/nav_history"
            android:icon="@drawable/ic_baseline_history_24"
            android:title="@string/menu_history" />
        <item
            android:id="@+id/nav_people"
            android:icon="@drawable/ic_baseline_group_24"
            android:title="@string/menu_people"/>
    </group>
</menu>