<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/nav_current">

    <fragment
        android:id="@+id/nav_current"
        android:name="com.simcom.ecashier.ui.currentCollection.CurrentCollectionFragment"
        android:label="@string/menu_current_collection"
        tools:layout="@layout/fragment_current_collection" />
    <fragment
        android:id="@+id/nav_add"
        android:name="com.simcom.ecashier.ui.addCollection.AddCollectionFragment"
        android:label="@string/menu_add_collection"
        tools:layout="@layout/fragment_add_collection" >
        <action
            android:id="@+id/action_nav_add_to_selectGroupFragment"
            app:destination="@id/selectGroupFragment" />
    </fragment>

    <fragment
        android:id="@+id/nav_history"
        android:name="com.simcom.ecashier.ui.history.HistoryFragment"
        android:label="@string/menu_history"
        tools:layout="@layout/fragment_history" />

    <fragment
        android:id="@+id/people_detail"
        android:name="com.simcom.ecashier.ui.people.PeopleFragment"
        android:label="@string/menu_people"
        tools:layout="@layout/fragment_people">
        <action
            android:id="@+id/action_people_detail_to_addPersonFragment"
            app:destination="@id/addPersonFragment" />
    </fragment>


    <fragment
        android:id="@+id/selectGroupFragment"
        android:name="com.simcom.ecashier.ui.addCollection.SelectGroupFragment"
        android:label="@string/menu_add_collection"
        tools:layout="@layout/fragment_select_group">
        <action
            android:id="@+id/action_selectGroupFragment_to_nav_add"
            app:destination="@id/nav_add" />
        <action
            android:id="@+id/action_selectGroupFragment_to_priceFragment"
            app:destination="@id/priceFragment" />
        <action
            android:id="@+id/action_selectGroupFragment_to_nav_people"
            app:destination="@id/nav_people" />
    </fragment>
    <fragment
        android:id="@+id/priceFragment"
        android:name="com.simcom.ecashier.ui.addCollection.PriceFragment"
        android:label="@string/menu_add_collection"
        tools:layout="@layout/fragment_price">
        <action
            android:id="@+id/action_priceFragment_to_selectGroupFragment"
            app:destination="@id/selectGroupFragment" />
        <action
            android:id="@+id/action_priceFragment_to_nav_current"
            app:destination="@id/nav_current" />
    </fragment>
    <fragment
        android:id="@+id/nav_people"
        android:name="com.simcom.ecashier.ui.people.GroupsFragment"
        android:label="GroupsFragment"
        tools:layout="@layout/fragment_groups">
        <action
            android:id="@+id/action_nav_people_to_people_detail"
            app:destination="@id/people_detail" />
        <action
            android:id="@+id/action_nav_people_to_addGroupFragment"
            app:destination="@id/addGroupFragment"/>
    </fragment>
    <fragment
        android:id="@+id/addGroupFragment"
        android:name="com.simcom.ecashier.ui.people.AddGroupFragment"
        android:label="AddGroupFragment"
        tools:layout="@layout/fragment_add_people">
        <action
            android:id="@+id/action_addGroupFragment_to_nav_people"
            app:destination="@id/nav_people"
            app:popUpToInclusive="true"
            app:popUpTo="@id/addGroupFragment" />
    </fragment>
    <fragment
        android:id="@+id/addPersonFragment"
        android:name="com.simcom.ecashier.ui.people.AddPersonFragment"
        android:label="AddPersonFragment"
        tools:layout="@layout/fragment_add_people">
        <action
            android:id="@+id/action_addPersonFragment_to_people_detail"
            app:destination="@id/people_detail"
            app:popUpToInclusive="true"
            app:popUpTo="@+id/addPersonFragment"
            app:launchSingleTop="true"/>
    </fragment>
</navigation>
